tests/baselines/reference/forInModule.errors.txt
forInModule.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== forInModule.ts (1 errors) ====
    module Foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	for (var i = 0; i < 1; i++) {
    		i+i;
    	}
    }